# Verilog-GoCode

./: .replit  LICENSE  README.md  forms.py  gocode.py  pyproject.toml
templates/: base.html  code.html  index.html
templates/extends/: base.html
